syntax = "proto3";

option go_package = "helloworld/v1;helloworld_v1";
package helloworld.v1;

// import "validate.proto"; // rust support not yet available, see https://github.com/envoyproxy/protoc-gen-validate/issues/457
import "google/protobuf/timestamp.proto";

service Greeter {
    // Our SayHello rpc accepts HelloRequests and returns HelloReplies
    rpc SayHello (HelloRequest) returns (HelloReply);

    // Generate a UUID on demand
    rpc UUIDGen (UUIDGenRequest) returns (UUIDGenReply);
}

message HelloRequest {
    // Request message contains the name to be greeted
    string name = 1;
}

message HelloReply {
    // Reply contains the greeting message
    string message = 1;
}

message UUIDGenRequest {}

message UUIDGenReply {
    string                      id              = 1; // [(validate.rules).string.uuid = true];
    google.protobuf.Timestamp   generated_at    = 2;
}
